developing get operation
