# src/main/java/com/spring/product/controller/ProductController.java
@@ -7,10 +7,7 @@ import com.spring.product.service.ProductTypeReadService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 @RestController
 public class ProductController {
@@ -30,5 +27,11 @@ public class ProductController {
     public ResponseEntity<ProductType> createProductTypeData(@RequestBody ProductType productType){
         productTypeCreateService.createProductType(productType);
         return new ResponseEntity<>(productType, HttpStatus.OK);
+    }
+
+    @GetMapping("/get-product-type-by-id/{id}")
+    public ResponseEntity<ProductTypeSuccessResponse> getProductById(@PathVariable("id") String id){
+        System.out.println(id);
+        return null;
     }
 }
